# computer-graphics-4099

./: README.md  assignment_1_code.wgsl  assignment_1_explanation.txt  assignment_2_explanation.txt  assignment_3_explanation.txt  assignment_4_explanation.txt  assignment_5_explanation.txt
assignment_2_code/: frag.wgsl  index.html  main.js  seagulls.js
assignment_3_code/: compute.wgsl  frag.wgsl  index.html  loader.js  main.js
assignment_4_code/: compute.wgsl  main.js  render.wgsl  shared.css
assignment_5_code/: compute.wgsl  loader.js  main.js  render.wgsl
final_project_code/: writeup.txt
final_project_code/nbody/: Cargo.toml
final_project_code/nbody/nbody/: Cargo.toml
final_project_code/nbody/nbody/shaders/: blit.wgsl  bloom_x.wgsl  bloom_y.wgsl  draw_gas.wgsl  draw_stars.wgsl  integrate.wgsl
final_project_code/nbody/nbody/shaders/spv/: integrate.spv
final_project_code/nbody/nbody/src/: app.rs  main.rs  pipelines.rs  wasm.rs
final_project_code/nbody/nbody/src/pass/: BlitPass.rs  ColorPass.rs  IntegratePass.rs  PPFXPass.rs  RenderPass.rs  UIPass.rs  mod.rs
final_project_code/nbody/nbody/src/simulation/: star.rs
